fix invisible buttons in password fields

--- a/style/themes/default-dark.css
+++ b/style/themes/default-dark.css
@@ -485,6 +485,12 @@ fieldset[disabled] .form-control {
   background-color: #367fa9 !important;
   border: 1px solid #367fa9;
 }
+input[type="password"]::-webkit-credentials-auto-fill-button {
+  background: #bfc5ca;
+}
+input[type="password"]::-webkit-caps-lock-indicator {
+  filter: invert(100%);
+}
 
 .network-never {
   background-color: #661b02;
